k8s-apps/02-deploy/prometheus/grafana-k8s-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-k8s-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP  
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - grafana-k8s.<<VAR_NGINX_DOMAIN>>
      #secretName: grafana-k8s-cert
  rules:
    - host: grafana-k8s.<<VAR_NGINX_DOMAIN>>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-k8s
                port:
                  number: 80
