k8s-apps/02-deploy/prometheus/prometheus-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-k8s-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - prometheus-k8s.<<VAR_CERT_CLUSTER_DOMAIN>>
      secretName: prometheus-k8s-cert
  rules:
    - host: prometheus-k8s.<<VAR_CERT_CLUSTER_DOMAIN>>
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus-k8s
                port:
                  number: 9090
